@@ -40,6 +40,10 @@
 <p>2023-08-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/bmp.c (ReadBMPImage): Fix GCC 13.1.0 warning about
+quantum_bits being possibly used while uninitialized.  I don't see
+how that is possible based on current logic, but avoid the
+warning.</p></li>
 <li><p>magick/gem.c (ExpandAffine): Mark as a pure function.</p></li>
 </ul>
 </blockquote>
