@@ -1,5 +1,10 @@
 2023-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/bmp.c (ReadBMPImage): Fix GCC 13.1.0 warning about
+	quantum_bits being possibly used while uninitialized.  I don't see
+	how that is possible based on current logic, but avoid the
+	warning.
+
 	* magick/gem.c (ExpandAffine): Mark as a pure function.
 
 2023-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
